Convert background and clear color to appropriate encoding. (#80)
* Convert background and clear color to appropriate encoding.

* Fix example webgl_loader_svg

* Remove duplicated encoding calculation code

--- a/examples/games_fps.html
+++ b/examples/games_fps.html
@@ -37,7 +37,7 @@
 			const clock = new THREE.Clock();
 
 			const scene = new THREE.Scene();
-			scene.background = new THREE.Color( 0x88ccff );
+			scene.background = new THREE.Color( 0x88ccff ).convertLinearToSRGB();
 
 			const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 			camera.rotation.order = 'YXZ';
