--- a/examples/webgl_geometry_extrude_shapes2.html
+++ b/examples/webgl_geometry_extrude_shapes2.html
@@ -403,7 +403,7 @@
 				//
 
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xb0b0b0 );
+				scene.background = new THREE.Color( 0xb0b0b0 ).convertLinearToSRGB();
 
 				//
 
