--- a/examples/webgl_geometry_minecraft.html
+++ b/examples/webgl_geometry_minecraft.html
@@ -64,7 +64,7 @@
 				camera.position.y = getY( worldHalfWidth, worldHalfDepth ) * 100 + 100;
 
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xbfd1e5 );
+				scene.background = new THREE.Color( 0xbfd1e5 ).convertLinearToSRGB();
 
 				// sides
 
