--- a/examples/webgl_loader_fbx.html
+++ b/examples/webgl_loader_fbx.html
@@ -52,7 +52,7 @@
 				camera.position.set( 100, 200, 300 );
 
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xa0a0a0 );
+				scene.background = new THREE.Color( 0xa0a0a0 ).convertLinearToSRGB();
 				scene.fog = new THREE.Fog( 0xa0a0a0, 200, 1000 );
 
 				const hemiLight = new THREE.HemisphereLight( 0xffffff, 0x444444 );
