--- a/examples/webgl_loader_ifc.html
+++ b/examples/webgl_loader_ifc.html
@@ -44,7 +44,7 @@
 
 				//Scene
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0x8cc7de );
+				scene.background = new THREE.Color( 0x8cc7de ).convertLinearToSRGB();
 
 				//Camera
 				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 1000 );
