--- a/examples/webgl_multiple_views.html
+++ b/examples/webgl_multiple_views.html
@@ -43,7 +43,7 @@
 					bottom: 0,
 					width: 0.5,
 					height: 1.0,
-					background: new THREE.Color( 0.5, 0.5, 0.7 ),
+					background: new THREE.Color( 0.5, 0.5, 0.7 ).convertLinearToSRGB(),
 					eye: [ 0, 300, 1800 ],
 					up: [ 0, 1, 0 ],
 					fov: 30,
@@ -60,7 +60,7 @@
 					bottom: 0,
 					width: 0.5,
 					height: 0.5,
-					background: new THREE.Color( 0.7, 0.5, 0.5 ),
+					background: new THREE.Color( 0.7, 0.5, 0.5 ).convertLinearToSRGB(),
 					eye: [ 0, 1800, 0 ],
 					up: [ 0, 0, 1 ],
 					fov: 45,
@@ -77,7 +77,7 @@
 					bottom: 0.5,
 					width: 0.5,
 					height: 0.5,
-					background: new THREE.Color( 0.5, 0.7, 0.7 ),
+					background: new THREE.Color( 0.5, 0.7, 0.7 ).convertLinearToSRGB(),
 					eye: [ 1400, 800, 1400 ],
 					up: [ 0, 1, 0 ],
 					fov: 60,
