--- a/examples/misc_controls_map.html
+++ b/examples/misc_controls_map.html
@@ -51,7 +51,7 @@
 			function init() {
 
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xcccccc );
+				scene.background = new THREE.Color( 0xcccccc ).convertLinearToSRGB();
 				scene.fog = new THREE.FogExp2( 0xcccccc, 0.002 );
 
 				renderer = new THREE.WebGLRenderer( { antialias: true } );
