--- a/examples/physics_ammo_volume.html
+++ b/examples/physics_ammo_volume.html
@@ -89,7 +89,7 @@
 				camera = new THREE.PerspectiveCamera( 60, window.innerWidth / window.innerHeight, 0.2, 2000 );
 
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xbfd1e5 );
+				scene.background = new THREE.Color( 0xbfd1e5 ).convertLinearToSRGB();
 
 				camera.position.set( - 7, 5, 8 );
 
