--- a/examples/webgl_multiple_elements.html
+++ b/examples/webgl_multiple_elements.html
@@ -192,7 +192,7 @@
 				renderer.setScissorTest( false );
 				renderer.clear();
 
-				renderer.setClearColor( 0xe0e0e0 );
+				renderer.setClearColor( new THREE.Color( 0xe0e0e0 ).convertLinearToSRGB() );
 				renderer.setScissorTest( true );
 
 				scenes.forEach( function ( scene ) {
