--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -77,7 +77,7 @@
 			camera.position.set( 0.13271600513224902, 0.3489546826045913, 0.43921296427927076 );
 
 			scene = new THREE.Scene();
-			scene.background = new THREE.Color( 0x443333 );
+			scene.background = new THREE.Color( 0x443333 ).convertLinearToSRGB();
 			scene.fog = new THREE.Fog( 0x443333, 1, 4 );
 
 			// Ground
