--- a/examples/webgl_shadowmap_vsm.html
+++ b/examples/webgl_shadowmap_vsm.html
@@ -93,7 +93,7 @@
 				camera.position.set( 0, 10, 30 );
 
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0x222244 );
+				scene.background = new THREE.Color( 0x222244 ).convertLinearToSRGB();
 				scene.fog = new THREE.Fog( 0x222244, 50, 100 );
 
 				// Lights
