--- a/examples/webgpu_materials.html
+++ b/examples/webgpu_materials.html
@@ -163,7 +163,7 @@
 				// Custom WGSL ( get texture from keywords )
 
 				const getWGSLTextureSample = new Nodes.FunctionNode( `
-					fn getWGSLTextureSample( uv:vec2<f32> ) -> vec4<f32> {
+					fn getWGSLTextureSample( tex: texture_2d<f32>, tex_sampler: sampler, uv:vec2<f32> ) -> vec4<f32> {
 
 						return textureSample( tex, tex_sampler, uv ) * vec4<f32>( 0.0, 1.0, 0.0, 1.0 );
 
@@ -171,10 +171,10 @@
 				` );
 
 				const textureNode = new Nodes.TextureNode( texture );
-				getWGSLTextureSample.keywords = { tex: textureNode, tex_sampler: sampler( textureNode ) };
+				//getWGSLTextureSample.keywords = { tex: textureNode, tex_sampler: sampler( textureNode ) };
 
 				material = new Nodes.MeshBasicNodeMaterial();
-				material.colorNode = getWGSLTextureSample.call( { uv: new Nodes.UVNode() } );
+				material.colorNode = getWGSLTextureSample.call( { tex: textureNode, tex_sampler: textureNode, uv: new Nodes.UVNode() } );
 				materials.push( material );
 
 				//
