update default channel in example.

--- a/examples/webgl_materials_channels.html
+++ b/examples/webgl_materials_channels.html
@@ -40,7 +40,7 @@
 			let camera, scene, renderer;
 
 			const params = {
-				material: 'velocity',
+				material: 'normal',
 				camera: 'perspective',
 				side: 'double'
 			};
