Homepage: fix procedural-gl-js showcase link (#23799)
* Homepage: fix procedural-gl-js showcase link

* Update index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<a href="https://github.com/home" target="_blank" rel="noopener"><img src="files/projects/github.png" loading="lazy"/></a>
 				<!-- December 2020 -->
 				<a href="https://spline.design/" target="_blank" rel="noopener"><img src="files/projects/spline.png" loading="lazy"/></a>
-				<a href="https://felixpalmer.github.io/procedural-gl-js/docs/" target="_blank" rel="noopener"><img src="files/projects/procedural-gl.png" loading="lazy"/></a>
+				<a href="https://www.procedural.eu/" target="_blank" rel="noopener"><img src="files/projects/procedural-gl.png" loading="lazy"/></a>
 				<a href="https://www.kodeclubs.com/" target="_blank" rel="noopener"><img src="files/projects/kodeclubs.png" loading="lazy"/></a>
 				<a href="https://www.midwam.com/en" target="_blank" rel="noopener"><img src="files/projects/midwam.png" loading="lazy"/></a>
 				<a href="https://billie.withyoutube.com/" target="_blank" rel="noopener"><img src="files/projects/billie.png" loading="lazy"/></a>
