--- a/examples/webgl_materials_channels.html
+++ b/examples/webgl_materials_channels.html
@@ -34,7 +34,7 @@
 			import { GUI } from './jsm/libs/lil-gui.module.min.js';
 			import { OBJLoader } from './jsm/loaders/OBJLoader.js';
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
-			import { MeshVelocityShader } from './jsm/shaders/MeshVelocityShader.js';
+			import { VelocityShader } from './jsm/shaders/VelocityShader.js';
 
 			let stats;
 
@@ -192,14 +192,14 @@
 				} );
 
 				materialVelocity = new THREE.ShaderMaterial( {
-					uniforms: THREE.UniformsUtils.clone( MeshVelocityShader.uniforms ),
-					vertexShader: MeshVelocityShader.vertexShader,
-					fragmentShader: MeshVelocityShader.fragmentShader,
+					uniforms: THREE.UniformsUtils.clone( VelocityShader.uniforms ),
+					vertexShader: VelocityShader.vertexShader,
+					fragmentShader: VelocityShader.fragmentShader,
 					side: THREE.DoubleSide
 				} );
-				materialVelocity.uniforms[displacementMap].value = displacementMap;
-				materialVelocity.uniforms[displacementScale].value = SCALE;
-				materialVelocity.uniforms[displacementBias].value = BIAS;
+				materialVelocity.uniforms.displacementMap.value = displacementMap;
+				materialVelocity.uniforms.displacementScale.value = SCALE;
+				materialVelocity.uniforms.displacementBias.value = BIAS;
 				materialVelocity.extensions.derivatives = true;
 
 				//
@@ -308,8 +308,8 @@
 				controlsPerspective.update();
 				controlsOrtho.update(); // must update both controls for damping to complete
 
-				materialVelocity.previousProjectionViewMatrix.copy(materialVelocity.currentProjectionViewMatrix);
- 				materialVelocity.currentProjectionViewMatrix.multiplyMatrices( camera.projectionMatrix, camera.matrixWorldInverse );
+				materialVelocity.uniforms.previousProjectionViewMatrix.value.copy(materialVelocity.uniforms.currentProjectionViewMatrix.value);
+ 				materialVelocity.uniforms.currentProjectionViewMatrix.value.multiplyMatrices( camera.projectionMatrix, camera.matrixWorldInverse );
 
 				renderer.render( scene, camera );
 
