--- a/examples/webgl_materials_channels.html
+++ b/examples/webgl_materials_channels.html
@@ -2,20 +2,35 @@
 <html lang="en">
 	<head>
 		<title>three.js webgl - materials - channels</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="main.css">
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+		/>
+		<link type="text/css" rel="stylesheet" href="main.css" />
 	</head>
 	<body>
-
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - <span id="description">Normal, Velocity, Depth, DepthRGBA, DepthRGBAUnpacked, Materials</span><br/>
-			by <a href="https://Clara.io">Ben Houston</a>. ninja head from <a href="https://gpuopen.com/archive/gamescgi/amd-gpu-meshmapper/" target="_blank" rel="noopener">AMD GPU MeshMapper</a>
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a>
+			-
+			<span id="description"
+				>Normal, Velocity, Depth, DepthRGBA, DepthRGBAUnpacked, Materials</span
+			><br />
+			by <a href="https://Clara.io">Ben Houston</a>. ninja head from
+			<a
+				href="https://gpuopen.com/archive/gamescgi/amd-gpu-meshmapper/"
+				target="_blank"
+				rel="noopener"
+				>AMD GPU MeshMapper</a
+			>
 		</div>
 
 		<!-- Import maps polyfill -->
 		<!-- Remove this when import maps will be widely supported -->
-		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+		<script
+			async
+			src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"
+		></script>
 
 		<script type="importmap">
 			{
@@ -308,20 +323,23 @@
 				controlsPerspective.update();
 				controlsOrtho.update(); // must update both controls for damping to complete
 
-				materialVelocity.uniforms.previousProjectionViewMatrix.value.copy(materialVelocity.uniforms.currentProjectionViewMatrix.value);
- 				materialVelocity.uniforms.currentProjectionViewMatrix.value.multiplyMatrices( camera.projectionMatrix, camera.matrixWorldInverse );
+				// remember camera projection changes.
+				materialVelocity.uniforms.previousProjectionViewMatrix.value.copy( materialVelocity.uniforms.currentProjectionViewMatrix.value );
+				materialVelocity.uniforms.currentProjectionViewMatrix.value.multiplyMatrices( camera.projectionMatrix, camera.matrixWorldInverse );
+
+				if( mesh && mesh.matrixWorldPrevious ) {
+					materialVelocity.uniforms.modelMatrixPrev.value.copy( mesh.matrixWorldPrevious );
+				}
 
 				renderer.render( scene, camera );
 
-				scene.traverse( obj => {
-					if (obj.isObject3D) {
-						obj.matrixWorldPrevious.copy(obj.matrixWorld);
-					}
-				});
+				scene.traverse( function( object ) {
+				    if ( object.isMesh ) {
+				        if ( object.matrixWorldPrevious === undefined ) object.matrixWorldPrevious = new Matrix4();
+				        object.matrixWorldPrevious.copy( object.matrixWorld );
+				    }
+				} );
 			}
-
 		</script>
-
 	</body>
-
 </html>
