--- a/examples/external_bvh_raycasting.html
+++ b/examples/external_bvh_raycasting.html
@@ -20,7 +20,7 @@
 	<body>
 		<div id="info">
 			<a href="https://github.com/gkjohnson/three-mesh-bvh">three-mesh-bvh</a> accelerated raycasting demo<br/>
-			See <a href="https://github.com/gkjohnson/three-mesh-bvh">main project repository</a> for more information and examples on high performance space queries.
+			See <a href="https://github.com/gkjohnson/three-mesh-bvh">main project repository</a> for more information and examples on high performance spatial queries.
 		</div>
 
 		<!-- Import maps polyfill -->
